--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,6 +12,7 @@
 #  last_name       :string           not null
 #  birthday        :date             not null
 #  gender          :string           not null
+#  profile_pic_url :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
