--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.2.0",
     "react-click-outside": "^3.0.0",
     "react-dom": "^16.2.0",
+    "react-linkify": "^0.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
