--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "linkify-it": "^2.0.3",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "react": "^16.2.0",
