--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^16.2.0",
     "react-click-outside": "^3.0.0",
     "react-dom": "^16.2.0",
+    "react-infinite-scroll-component": "^3.0.2",
     "react-linkify": "^0.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-spinners": "^0.2.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "webpack": "^3.10.0"
